--- a/css/main.css
+++ b/css/main.css
@@ -22,4 +22,27 @@
 .add_btn {
     color: #56bac8;
     background: white;
+    height: fit-content;
+}
+
+.gray_back{
+    background: linear-gradient(to top left, #b7b4bb, #cbcfd6);
+
+}
+
+.float{
+    position:fixed;
+    width:60px;
+    height:60px;
+    bottom:40px;
+    right:40px;
+    background-color:#0C9;
+    color:#FFF;
+    border-radius:50px;
+    text-align:center;
+    box-shadow: 2px 2px 3px #999;
+}
+
+.my-float{
+    margin-top:11px;
 }
